fix/text-size-adjust on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,10 @@ a[href^="tel"] {
 
 body {
   font-family: "Barlow", "Montserrat", sans-serif;
+  -moz-text-size-adjust: none;
+   -ms-text-size-adjust: none;
+       text-size-adjust: none;
+  -webkit-text-size-adjust: none;
 }
 
 h1,
