--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -4,6 +4,8 @@
 
 body {
   font-family: "Barlow", "Montserrat", sans-serif;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
 }
 
 h1,
